--- a/FundamentosHTML_Isaac_Haiat/css/estilos.css
+++ b/FundamentosHTML_Isaac_Haiat/css/estilos.css
@@ -7,3 +7,13 @@ footer{
 img{
   border-radius: 10px;
 }
+#Contenedor
+{
+  font-family: helvetica;
+  font-size: 16px;
+}
+#Encabezado
+{
+  display: block;
+  margin: 0 auto;
+}
