--- a/CSSyDisenoWebResponsive _Isaac_Haiat/css/estilos.css
+++ b/CSSyDisenoWebResponsive _Isaac_Haiat/css/estilos.css
@@ -1,102 +1,145 @@
 body {
-		margin: 0px;
+		margin: 10px;
 		background-color:  #02010a;
 		font-family: Dancing Script;
-		font-weight: bold;
+		/*font-weight: bold;*/
 	}
 .contenido{
 	width: 100%;
 	max-width: 900px;
-	height: auto;
+	/*height: auto;*/
 	margin: auto;
 	display: flex;
-	flex-flow: column nowrap;
-	/*border: 2px solid blue;*/
-}
+	flex-flow:row wrap;
+	}
 		.header{
 			background:  #5b7989;
-			display:flex;
-			flex-flow: row nowrap;
-			height: auto;
+			padding: 10px;
+			width: 100%;
 			border-radius: 10px 10px 0 0;
-			align-items: center;
+			display: flex;
+			justify-content:space-between;
+			align-items:center;
+	 		flex-direction:row;
+			flex-wrap:wrap;
 			/*border: 2px solid blue;*/
 		}
-				.texto {
-						display: flex;
-						/*border: 2px solid blue;*/
-						height: 100px;
+				header .texto {
+						width: 50%;
 						align-items: center;
+						align-content: center;
 						}
-							h1 {
-							color: white;
-							text-shadow: 1px 2px #02010a;
-							/*line-height: 50px;*/
-							/*border: 2px solid blue;*/
-							}
 
-				.nav{
-						flex: 1 1 auto;
-						/*border: 2px solid blue;*/
-						height: 100px;
-					}
+				 .texto h1{
+					 font-size: 30px;
+					 color: white;
+					 text-align: left;
+					 text-shadow: 1px 2px #02010a;
+				 }
+
+				header nav {
+				width:30%;
+				display:flex;
+				flex-wrap:wrap;
+				align-items: flex-end;
+				}
+
+				header nav a {
+				font-size: 20px;
+				color: white;
+				text-align: center;
+				text-decoration: none;
+				justify-content: space-around;
+				flex-grow:1;
+			}
 
 		.central{
 			background: #82c3a6;
-			display: flex;
-			/*border: 2px solid blue;*/
-			height: auto;
-			justify-content: center;
-			}
-				.foto1 img{
-					align-items: center;
-					width: 40%;
-					/*border: 2px solid blue;*/
-					height: auto;
-					}
-
-		.secundarias{
-			background: #d5c75f ;
+			width: 100%;
+			height: 50%;
 			display: flex;
 			flex-flow: row nowrap;
-		/*border: 2px solid blue;*/
-			height: auto;
-			justify-content: space-between;
-		}
-
-			.fotoizq img{
-				align-items: center;
-				width: 50%;
-				/*border: 2px solid blue;*/
-				height: auto;
+			justify-content: center;
+			align-items: center;
 			}
 
-			.fotoder img{
-				align-items: center;
+			.central img {
+					width: 90%;
+					height: 90%;
+					margin: auto;
+				}
+
+			.secundarias {
+				background: #d5c75f ;
+				width: 100%;
+				height: 70%;
+				display: flex;
+				flex-flow: row nowrap;
+				justify-content: center;
+				}
+
+			.paisajes {
 				width: 50%;
-				/*border: 2px solid blue;*/
-				height: auto;
+				margin: auto;
+				display: flex;
+				flex-flow: column;
+				align-items: center;
 			}
+
+				.paisajes img{
+					width: 85%;
+					-webkit-box-shadow: 2px 2px #82c3a6;
+					-moz-box-shadow: 2px 2px #82c3a6;
+				}
+				.paisajes img:hover {
+					transform: rotate(10deg);
+					}
+
+				.retratos {
+					width: 50%;
+					margin: auto;
+					display: flex;
+					flex-flow: column nowrap;
+					align-items: center;
+				}
+
+				.retratos img{
+					width: 85%;
+					-webkit-box-shadow: 2px 2px #82c3a6;
+					-moz-box-shadow: 2px 2px #82c3a6;
+				}
+				.retratos img:hover {
+					transform: translate(20px, -5px);
+					}
+
+					.paisajes h3 a{
+						font-size: 15px;
+						text-align: center;
+						color: black;
+					}
+
+					.retratos h3 a{
+					font-size: 15px;
+					text-align: center;
+					color:black;
+				}
 
 		.footer{
 			background: #C6d5c5;
+			width: 100%;
+			height: 30%;
 			display: flex;
-			flex-flow: column nowrap;
-			/*border: 2px solid blue;*/
-			height: auto;
+			flex-flow: row wrap;
+			justify-content: space-between;
 			border-radius: 0 0 10px 10px;
 			}
 
-			.pie{
-				display: flex;
-				flex-flow: row nowrap;
-				/*border: 2px solid blue;*/
-				height: 100px;
-			}
 			.contacto{
 					flex: 1 1 auto;
 					border: 2px solid blue;
-			}
+					padding: 10px;
+					}
+
 			.termino{
 					flex: 1 1 auto;
 					border: 2px solid blue;
@@ -109,3 +152,10 @@ body {
 					flex: 1 1 auto;
 					border: 2px solid blue;
 			}
+
+			.impaisajes{
+				display: flex;
+ 				flex-wrap: wrap;
+ 				flex-direction: column;
+ 				align-content: space-between;
+}
